assets/style/style.css
/* #region common */
*{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}
:root{
    --rsp-violet: #9792E4;
    --rsp-primary: #0084FD;
    --rsp-light-primary: #B5DDFF;
    --rsp-special: #FDC15F;
    --rsp-footer: #333333;
    --rsp-white: #fff;
    --rsp-black: #000 ;
    --rps-introduction-txt: #647b8e ;
}

body{
    font-family: 'PT Sans', sans-serif;
}

nav{
    background-color: var(--rsp-primary);
    padding: 1rem;
}

a{
    text-decoration: none;
}
footer{
    background-color: var(--rsp-footer);
    color: var(--rsp-white);
    
}
/* #endregion common */

/* #region header */
.hamburger{
    color: var(--rsp-white);
}
.a-white{
    color: var(--rsp-white);
}
.a-purple{
    color: var(--rsp-violet);
}
.a-black{
    color: var(--rsp-black);
}
/* #endregion header */
/* #region main */

/* #region introduction */
.introduction h2,   
.introduction i{
    color: var(--rsp-primary);
}

[class^='col-']{
    margin-bottom: 1rem;
}
#app{
    flex-direction: column;
   
}
.card_introduction{
    margin: 1rem;
    padding: 2rem;
    padding-bottom: 0;
    border-radius: 20px;
    background-color: var(--rsp-light-primary);
}

.f-size{
    font-size: 6rem;
}
.f-size-md{
    font-size: 3rem;
}
.t-center{
    text-align: center;

}
.introduction p{
    line-height: 2rem;
    font-weight: 600;
    color: var(--rps-introduction-txt) ;
}
/* #endregion introduction */

/* #region planning */
.planning{
    background-color: var(--rsp-violet);
    margin-top: 4rem ;
}
.planning_card{
    color: var(--rsp-white);
}
.card_planning{
    background-color: var(--rsp-white);
    border-radius: 20px;
    text-align: center;
    padding: 1rem;
    flex-direction: column;
}
.card_planning p{
    line-height: 1.5rem;
}
/* #endregion planning */

/* #region Partners */
.txt{
    text-align: center;
}


.txt h1{
    color: var(--rsp-violet);
    font-size: 2.5rem;
    margin-bottom: 1rem;
}

.txt> p{
    line-height: 2rem;
    font-size: 1.25rem;
}

.card_partners{
    background-color: var(--rsp-violet);
    border-radius: 50px;
    padding: 2rem;
    color: var(--rsp-white);
    flex-direction: column;
    font-size: 1.5rem;
    line-height: 3rem;
}

.fix{
    flex-direction: column;
}

.fix> h2{
    text-transform: uppercase;
    font-size: 1.5rem;

}
/* #endregion Partners */

/* #region why us */
.why-us{
    background-color: var(--rsp-violet);
}

.why-us h1{
    color: var(--rsp-white);
}

.card_why_us> h2,
.card_why_us> h3{
  color: var(--rsp-violet);
}
.card_why_us> h2{
    font-size: 4rem;
}
.card_why_us> h3{
    font-size: 1.5rem;
}

.card_why_us{
    background-color: var(--rsp-white);
    padding: 1.5rem;
    border-radius: 20px;
    margin: 0.5rem;
}
.card_why_us>p{
    line-height: 1.5rem;
    padding-top: 1rem;
}


/* #endregion why us */


/* #region About Us */
.about-us h1, .about-us h2{
    color: var(--rsp-violet);
}
.about-us h2{
    font-size: 2rem;
}
.card_about_us{
    padding: 1rem;
}
.card_about_us>p{
    line-height: 2rem;
}
.virgole{
    color: var(--rsp-violet);
    right: 30px;
    top: 35px;
}
/* #endregion About Us */

/* #region free */
.free{
    background-color: var(--rsp-violet);
    color: var(--rsp-white);
    text-align: center;
}
.start{
    font-weight: 300;
}
.simple{
    font-size: 2rem;
}
.special{
    color: var(--rsp-special);
    font-size: 4rem;
}
.card_free> p{
    line-height: 2rem;
}
.underline{
    text-decoration: underline;
}
/* #endregion free */

/* #endregion main */

/* #region footer */

/* #endregion footer */

/* #region utility */

.container{
    width: 80%;
    max-width: 420px;
    margin: auto;
}
/* /container */

.list-unstyled {
	list-style: none;
}

.list-inline {
    display: flex;
    gap: 1rem;
}

/* /list */

.d-none{
display:none;
}

.d-block{
    display: block;
}
.d-in-b{
    display: inline-block;

}
/* /display */

.img-flow{
    width: 100%;
}
.img-fix{
    border-radius: 50%;
    height: 150px;
    width: 150px;
    object-fit: cover;
    margin: 1rem;
}
/* /img */

.row{
    display: flex;
    flex-wrap: wrap;
    margin: 0 -1rem;
    height: 100%;
}
/* /row */
.d-flex{
    display: flex;
}
.space-btw{
    justify-content: space-between;
}
.space-center{
    justify-content: center;
}
.align-items{
    align-items: center;
}
/* /flex */
.btn{
    border-radius: 45px;
    text-align: center;
}
.btn-primary{
    width: fit-content;
    padding: 0.5rem 4rem;
    background-color: var(--rsp-primary);
}
.btn-started{
    padding: 0.5rem;
    background-color: var(--rsp-white);
}
.btn-arrow{
    background-color: var(--rsp-violet);
    border-radius: 50%;
    line-height: 50px;
    width: 50px;
    height: 50px;   
}
.btn_why_us{
    background-color: var(--rsp-violet);
    padding: 0.5rem 4rem;
    width: fit-content;
    margin-top: 2rem;    
}
.btn_about_us{
    background-color: var(--rsp-violet);
    padding: 0.5rem 1rem;
    width: fit-content;
    margin-top: 1rem; 
}
.btn_free{
    background-color: var(--rsp-white);
    padding: 1.5rem 3rem;
    font-size: 1.5rem;
}
/* /btn */
.p-absolute{
    position: absolute;
}
.p-relative{
    position: relative;
}
/* /position */
.py-2{
    padding: 2rem 0;
}
.py-4{
    padding: 4rem 0;
}

.pb-2{
    padding-bottom: 2rem;
}
.pt-2{
    padding-top: 2rem;
}

/* /padding */

.my-2{
    margin: 2rem 0;
}
.mb-2{
    margin-bottom: 2rem;
}
.mt-2{
    margin-top: 2rem;
}
/* /margin */
/* #region utility */

/* #region responsive */

@media screen and (min-width:420px){
    /* mobile */
    .container-sm{
        width: 80%;
        max-width: 420px;
        margin: auto;
    }

    .container-lg{
        width: 80%;
        max-width: 420px;
        margin: auto;
    }

}

@media screen and (min-width:768px){
    /* tablet */
    .container{
        width: 90%;
        max-width: 1024px;
        margin: auto;
    }
    .container-lg{
        width: 90%;
        max-width: 1024px;
        margin: auto;
    }

    .introduction p{
        line-height: 1.5rem;
        font-weight: 600;
        color: var(--rps-introduction-txt) ;
    }
    .card_introduction{
        height: 100%;
        margin-bottom: 0;
    }

    .card_partners{
        flex-direction: row;
    }
    .fix{
        flex-direction: column;
        align-items: flex-start;
    }

    /* #region utility */
    .col-md-8{
        width: calc(100%/12*8);
    }

    .col-md-4{
        width: calc(100%/12*4);
    }
    .col-md-6{
        width: calc(100%/12*6);
    }

    .col-md-12{
        width: 100%;
    }
    /* /col */

    /* #endregion utility */

}

@media screen and (min-width: 1024px){
    /* laptop */
    .container{
        width: 80%;
        max-width: 1152px;
        margin: auto;
    }
   
    .container-lg{
        width: 80%;
        max-width: 920px;
        margin: auto;
    }
    .d-lg-block{
        display: block;
    }
    .d-lg-none{
        display: none;
    }

    
    .card_planning{
        margin-top: 15rem;
    }
   
    /* #region utility */
  
   .col-lg-6{
    width: calc(100%/12*6);
   }

   .col-lg-4{
    width: calc(100%/12*4);
   }
    /* /col */

    /* #endregion utility */
}

@media screen and (min-width: 1440px){
    /* desktop */


}

/* #endregion responsive */

